--- a/client/src/assets/locale/FA.pug
+++ b/client/src/assets/locale/FA.pug
@@ -18,14 +18,33 @@
 - var STR_referral = "معرف"
 - var STR_infoHeader = "از این فرم برای وارد کردن اطلاعات کاربری استفاده کنید."
 
+//student stuff goes here
+- var STR_grade = "مقطع"
+- var STR_province = "استان"
+- var STR_city = "شهر"
+- var STR_school = "مدرسه"
+- var STR_studentHeader = "ازین فرم برای وارد کردن اطلاعات دانش‌آموزی استفاده کنید."
 
 
+//teacher stuff goes here
+- var STR_teacherHeader = "ازین فرم برای وارد کردن اطلاعات معلمی استفاده نمایید."
+- var STR_credits = "سوابق معلم"
+- var STR_degrees = "مدارک معلم"
 
-
-
-
-
-
+//course stuff goes here
+- var STR_courseHeader = "برای ایجاد یک دوره ازین فرم استفاده کنید."
+- var STR_subject = "موضوع دوره"
+- var STR_description = "توضیحات دوره"
+- var STR_price = "قیمت دوره"
+- var STR_courseClassHeader = "برای ایجاد کلاسهای دوره ازین فرم استفاده کنید."
+- var STR_session = "جلسه"
+- var STR_classDate = "تاریخ کلاس"
+- var STR_classHour = "ساعت کلاس"
+- var STR_classParticipants = "دانش‌آموزان کلاس"
+- var STR_classNotes = "ملاحضات کلاس"
+- var STR_notesHint = "دانش‌آموزان را با ویرگول جدا کنید. نام کاربری آن‌ها را وارد کنید."
+- var STR_students = "دانش آموزان"
+- var STR_notes = "ملاحظات"
 
 //general stuff goes here
 - var STR_sendInfo = "ارسال اطلاعات"
