--- a/client/src/assets/locale/FA.pug
+++ b/client/src/assets/locale/FA.pug
@@ -10,10 +10,11 @@
 - var STR_loginString = "نام کاربری، ایمیل یا موبایل"
 - var STR_loginHeader = "برای ورود به سرویس از این فرم استفاده کنید."
 - var STR_loginButton = "ورود"
+- var STR_confirmPassword = "تایید رمز عبور"
 
 //user info stuff goes here
 - var STR_firstName = "نام"
-- var STR_lastName = "نام کاربری"
+- var STR_lastName = "نام خوانوادگی"
 - var STR_dateOfBirth = "تاریخ تولد"
 - var STR_referral = "معرف"
 - var STR_infoHeader = "از این فرم برای وارد کردن اطلاعات کاربری استفاده کنید."
@@ -36,19 +37,31 @@
 - var STR_subject = "موضوع دوره"
 - var STR_description = "توضیحات دوره"
 - var STR_price = "قیمت دوره"
-- var STR_courseClassHeader = "برای ایجاد کلاسهای دوره ازین فرم استفاده کنید."
+- var STR_courseClassHeader = "برای ایجاد کلاس‌های دوره ازین فرم استفاده کنید."
 - var STR_session = "جلسه"
 - var STR_classDate = "تاریخ کلاس"
 - var STR_classHour = "ساعت کلاس"
 - var STR_classParticipants = "دانش‌آموزان کلاس"
 - var STR_classNotes = "ملاحضات کلاس"
 - var STR_notesHint = "دانش‌آموزان را با ویرگول جدا کنید. نام کاربری آن‌ها را وارد کنید."
-- var STR_students = "دانش آموزان"
+- var STR_students = "دانش‌آموزان"
 - var STR_notes = "ملاحظات"
+
+//profile stuff goes here
+- var STR_profileHeader = "پروفایل کاربر"
+- var STR_makeStudent = "ایجاد دانش‌آموز"
+- var STR_makeTeacher = "ایجاد معلم"
+- var STR_infoTitle = "اطلاعات کاربری"
+- var STR_teacherTitle = "اطلاعات معلمی"
+- var STR_studentTitle = "اطلاعات دانش‌آموزی"
+
 
 //general stuff goes here
 - var STR_sendInfo = "ارسال اطلاعات"
-
-
-
+- var STR_addTeacherFavorite = "اضافه کردن به علاقه‌مندی‌ها"
+- var STR_addTeacherEngaged = "اضافه کردن به لیست معلم‌ها"
+- var STR_youLoggedOut = "شما خارج شدید."
+- var STR_returnToHome = "بازگشت به خانه"
+- var STR_fillFurther = "حال، لطفا اطلاعات دانش آموزی یا معلمی را پر کنید."
+- var STR_fillInfo = "لطفا ابتدا اطلاعات کاربری را ارسال کنید."
 
