--- a/client/src/assets/locale/FA.pug
+++ b/client/src/assets/locale/FA.pug
@@ -43,7 +43,7 @@
 - var STR_classHour = "ساعت کلاس"
 - var STR_classParticipants = "دانش‌آموزان کلاس"
 - var STR_classNotes = "ملاحضات کلاس"
-- var STR_notesHint = "دانش‌آموزان را با ویرگول جدا کنید. نام کاربری آن‌ها را وارد کنید."
+- var STR_participantsHint = "دانش‌آموزان را با ویرگول جدا کنید. نام کاربری آن‌ها را وارد کنید."
 - var STR_students = "دانش‌آموزان"
 - var STR_notes = "ملاحظات"
 
@@ -64,4 +64,4 @@
 - var STR_returnToHome = "بازگشت به خانه"
 - var STR_fillFurther = "حال، لطفا اطلاعات دانش آموزی یا معلمی را پر کنید."
 - var STR_fillInfo = "لطفا ابتدا اطلاعات کاربری را ارسال کنید."
-
+- var redirectHeader = "کاربر ساخته شد. هم‌اکنون به پروفایل منتقل می‌شوید."
