--- a/client/src/assets/locale/FA.pug
+++ b/client/src/assets/locale/FA.pug
@@ -25,10 +25,11 @@
 - var STR_city = "شهر"
 - var STR_school = "مدرسه"
 - var STR_studentHeader = "ازین فرم برای وارد کردن اطلاعات دانش‌آموزی استفاده کنید."
-
+- var STR_editStudentHeader = "ازین فرم برای ویرایش کردن اطلاعات دانش‌آموزی استفاده کنید."
 
 //teacher stuff goes here
 - var STR_teacherHeader = "ازین فرم برای وارد کردن اطلاعات معلمی استفاده نمایید."
+- var STR_editTeacherHeader = "ازین فرم برای ویرایش کردن اطلاعات معلمی استفاده نمایید."
 - var STR_credits = "سوابق معلم"
 - var STR_degrees = "مدارک معلم"
 
