enough coding for today

--- a/client/src/assets/locale/FA.pug
+++ b/client/src/assets/locale/FA.pug
@@ -66,3 +66,7 @@
 - var STR_fillFurther = "حال، لطفا اطلاعات دانش آموزی یا معلمی را پر کنید."
 - var STR_fillInfo = "لطفا ابتدا اطلاعات کاربری را ارسال کنید."
 - var redirectHeader = "کاربر ساخته شد. هم‌اکنون به پروفایل منتقل می‌شوید."
+
+
+- var STR_ok = "قبول"
+- var STR_cancel = "لغو"
