--- a/client/src/assets/locale/FA.pug
+++ b/client/src/assets/locale/FA.pug
@@ -35,10 +35,12 @@
 
 //course stuff goes here
 - var STR_courseHeader = "برای ایجاد یک دوره ازین فرم استفاده کنید."
+- var STR_courseEditHeader = "برای ویرایش یک دوره ازین فرم استفاده کنید."
 - var STR_subject = "موضوع دوره"
 - var STR_description = "توضیحات دوره"
 - var STR_price = "قیمت دوره"
 - var STR_courseClassHeader = "برای ایجاد کلاس‌های دوره ازین فرم استفاده کنید."
+- var STR_courseEditClassHeader = "برای ویرایش کلاس‌های دوره ازین فرم استفاده کنید."
 - var STR_session = "جلسه"
 - var STR_classDate = "تاریخ کلاس"
 - var STR_classHour = "ساعت کلاس"
@@ -59,6 +61,7 @@
 
 //general stuff goes here
 - var STR_sendInfo = "ارسال اطلاعات"
+- var STR_editInfo = "ویرایش اطلاعات"
 - var STR_addTeacherFavorite = "اضافه کردن به علاقه‌مندی‌ها"
 - var STR_addTeacherEngaged = "اضافه کردن به لیست معلم‌ها"
 - var STR_youLoggedOut = "شما خارج شدید."
