school components done

--- a/client/src/assets/locale/FA.pug
+++ b/client/src/assets/locale/FA.pug
@@ -49,6 +49,7 @@
 - var STR_participantsHint = "دانش‌آموزان را با ویرگول جدا کنید. نام کاربری آن‌ها را وارد کنید."
 - var STR_students = "دانش‌آموزان"
 - var STR_notes = "ملاحظات"
+- var STR_connectURL = "لینک مجازی کلاس"
 
 //profile stuff goes here
 - var STR_profileHeader = "پروفایل کاربر"
@@ -73,3 +74,10 @@
 
 - var STR_ok = "قبول"
 - var STR_cancel = "لغو"
+
+- var STR_editSchoolHeader = "ازین فرم برای ویرایش اطلاعات مدرسه استفاده کنید."
+- var STR_schoolName = "نام مدرسه"
+- var STR_schoolGrade = "مقطع مدرسه"
+- var STR_schoolLandline = "خط ثابت"
+- var STR_schoolAddress = "مدرسه"
+- var STR_landlineInvalid = "خط ثابت مدرسه باید فقط رقم باشد."
