final push of this branch

--- a/client/src/assets/locale/FA.pug
+++ b/client/src/assets/locale/FA.pug
@@ -81,3 +81,13 @@
 - var STR_schoolLandline = "خط ثابت"
 - var STR_schoolAddress = "مدرسه"
 - var STR_landlineInvalid = "خط ثابت مدرسه باید فقط رقم باشد."
+
+- var STR_teacherCatHeader = "ازین صفحه برای مشاهده‌ی معلم‌‌های مدرسه‌ی خود استفاده کنید."
+- var STR_courseCatHeader = "ازین صفحه برای مشاهده‌ی دوره‌های مدرسه‌ی خود استفاده کنید."
+- var STR_studentCatHeader = "ازین صفحه برای مشاهده‌ی هم‌مدرسه‌ای‌های خود استفاده کنید."
+
+- var STR_toStudentProfile = "پروفایل دانش‌آموز"
+- var STr_toTeacherProfile = "پروفایل معلم"
+- var STR_toCoursePage = "صفحه‌ی دوره"
+
+- var STR_toman = "ریال"
