--- a/client/src/assets/locale/FA.pug
+++ b/client/src/assets/locale/FA.pug
@@ -74,12 +74,13 @@
 
 - var STR_ok = "قبول"
 - var STR_cancel = "لغو"
+- var STR_delete = "پاک کردن"
 
 - var STR_editSchoolHeader = "ازین فرم برای ویرایش اطلاعات مدرسه استفاده کنید."
 - var STR_schoolName = "نام مدرسه"
 - var STR_schoolGrade = "مقطع مدرسه"
 - var STR_schoolLandline = "خط ثابت"
-- var STR_schoolAddress = "مدرسه"
+- var STR_schoolAddress = "آدرس مدرسه"
 - var STR_landlineInvalid = "خط ثابت مدرسه باید فقط رقم باشد."
 
 - var STR_teacherCatHeader = "ازین صفحه برای مشاهده‌ی معلم‌‌های مدرسه‌ی خود استفاده کنید."
@@ -91,3 +92,4 @@
 - var STR_toCoursePage = "صفحه‌ی دوره"
 
 - var STR_toman = "ریال"
+
