--- a/client/src/assets/locale/FA.pug
+++ b/client/src/assets/locale/FA.pug
@@ -93,3 +93,8 @@
 
 - var STR_toman = "ریال"
 
+- var STR_registerSchoolHeader = "ازین فرم برای ثبت نام مدرسه استفاده کنید."
+
+- var STR_schoolInfoTitle = "اطلاعات مدرسه"
+- var STR_profileSchoolHeader = "پروفایل مدرسه"
+- var STR_loginSchoolHeader = "برای ورود به سیستم مدرسه ازین فرم استفاده کنید."
