finally done! final commit of this branch

--- a/client/src/assets/locale/FA.pug
+++ b/client/src/assets/locale/FA.pug
@@ -88,7 +88,7 @@
 - var STR_studentCatHeader = "ازین صفحه برای مشاهده‌ی هم‌مدرسه‌ای‌های خود استفاده کنید."
 
 - var STR_toStudentProfile = "پروفایل دانش‌آموز"
-- var STr_toTeacherProfile = "پروفایل معلم"
+- var STR_toTeacherProfile = "پروفایل معلم"
 - var STR_toCoursePage = "صفحه‌ی دوره"
 
 - var STR_toman = "ریال"
@@ -98,3 +98,14 @@
 - var STR_schoolInfoTitle = "اطلاعات مدرسه"
 - var STR_profileSchoolHeader = "پروفایل مدرسه"
 - var STR_loginSchoolHeader = "برای ورود به سیستم مدرسه ازین فرم استفاده کنید."
+
+- var STR_addCourse = "اضافه کردن دوره"
+
+- var STR_noCourse = "مدرسه دوره‌ای ندارد."
+- var STR_noStudent = "مدرسه دانش‌آموزی ندارد."
+- var STR_noTeacher = "مدرسه معلمی ندارد."
+- var STR_coursePageHeader = "برای مشاهده‌ی اطلاعات دوره از این صفحه استفاده کنید."
+- var STR_loading = "در حال بارگذاری"
+- var STR_close = "بستن"
+- var STR_view = "مشاهده"
+- var STR_ourSchools = "مدارس ما"
