--- a/client/src/assets/locale/FA.pug
+++ b/client/src/assets/locale/FA.pug
@@ -109,3 +109,7 @@
 - var STR_close = "بستن"
 - var STR_view = "مشاهده"
 - var STR_ourSchools = "مدارس ما"
+
+- var STR_registerSchool = "ثبت نام مدرسه"
+
+- var STR_siteName = "ای‌کلاس"
